lidt mere responsive

--- a/om-mig.html
+++ b/om-mig.html
@@ -15,8 +15,10 @@
 </head>
 
 <body>
-    <img id="right" src="right.svg" alt="right">
-    <img id="left" src="left.svg" alt="left">
+    <div>
+        <img id="right" src="right.svg" alt="right">
+        <img id="left" src="left.svg" alt="left">
+    </div>
 
     <header id="skilt_tekst">
         <img id="skilt" src="skilt.png" alt="Skilt">
@@ -49,7 +51,7 @@
 
     <div id=container>
         <p id="tekst">
-            Mit navn er Elisabeth Olsen & jeg er 22 år gammel. I sommers startede jeg på 1. semester på Multimediedesign på KEA - og har været glad for det siden. Jeg bor på Nørrebro med mine to højskole roomies, som jeg mødte på Vallekilde højskole. Jeg har to søstre der hedder Kristiane & Cordelia, samt mine dejlige forældre, Kim & Margrethe. Familie betyder alt for mig. Jeg har boet i alt 3 forskellige lande gennem mit korte liv, nemlig England, Abu Dhabi & danmark. I fritiden elsker jeg at tilbringe min tid sammen med min kæreste, venner & familie i naturen. Min Kæreste Valdemar & jeg tager ofte på camping ture i skoven. Jeg elsker også at hækle, hygge kaffe-snakke, vandre, lave mad, surfe osv.
+            Mit navn er Elisabeth Olsen & jeg er 22 år gammel. I sommers startede jeg på 1. semester på Multimediedesign på KEA - og har været glad for det siden. Jeg bor på Nørrebro med mine to højskole roomies, som jeg mødte på Vallekilde højskole. Jeg har to søstre der hedder Kristiane & Cordelia, samt mine dejlige forældre, Kim & Margrethe. Familie betyder alt for mig. I alt har jeg boet 3 forskellige lande gennem mit korte liv, nemlig England, Abu Dhabi & danmark. I fritiden elsker jeg at tilbringe min tid sammen med min kæreste, venner & familie i naturen. Min Kæreste Valdemar & jeg tager ofte på camping ture i skoven. Jeg elsker også at hækle, hygge kaffe-snakke, vandre, lave mad, surfe osv.
             <br>
             På mit 1. semester på KEA har jeg allerede lært en masse. Jeg har lært alt fra kode HTML, CSS & Javascript, til billed og video-redigering. Jeg har også lært omkring UX & UI research - nemlig hvad der forgår før man designer/programmere. Alt ind til videre har været spændene, og generalt så ser jeg altid frem til en dag hos KEA.
         </p>
