--- a/forside.html
+++ b/forside.html
@@ -21,6 +21,13 @@
         <img id="blomst_left" src="blomst_left.svg" alt="blomst left">
     </div>
 
+    <img id="snowflake" src="snowflake.svg" alt="snowflake">
+    <img id="snowflake2" src="snowflake.svg" alt="snowflake">
+    <img id="snowflake3" src="snowflake.svg" alt="snowflake">
+    <img id="snowflake4" src="snowflake.svg" alt="snowflake">
+    <img id="snowflake5" src="snowflake.svg" alt="snowflake">
+    <img id="snowflake6" src="snowflake.svg" alt="snowflake">
+
     <header>
         <h1>Portfolio</h1>
         <p>©Elisabeth Olsen</p>
