--- a/portfolio.html
+++ b/portfolio.html
@@ -40,18 +40,18 @@
 
     <section id="section_galleri">
         <div class="column">
-            <a href="case.html"><img class="voks" src="design_dokumentation.png" alt="designdokumentation"></a>
-            <a href="case.html"><img class="voks" src="redesign.png" alt="redesign"></a>
+            <a href="case.html#design_link"><img class="voks" src="design_dokumentation.png" alt="designdokumentation"></a>
+            <a href="case.html#redesign_link"><img class=" voks" src="redesign.png" alt="redesign"></a>
         </div>
         <div class="column">
-            <a href="case.html"><img class="voks" src="responsive_design.png" alt="responsive_design"></a>
-            <a href="case.html"><img class="voks" src="pitch.png" alt="pitch"></a>
-            <a href="case.html"><img class="voks" src="prototype.png" alt="prototype"></a>
+            <a href="case.html#responsive_link"><img class="voks" src="responsive_design.png" alt="responsive_design"></a>
+            <a href="case.html#pitch_link"><img class="voks" src="pitch.png" alt="pitch"></a>
+            <a href="case.html#prototype_link"><img class="voks" src="prototype.png" alt="prototype"></a>
         </div>
         <div class="column">
-            <a href="case.html"><img class="voks" src="ide_udvikling.png" alt="ide_udvikling"></a>
-            <a href="case.html"><img class="voks" src="pilotprojekt.png" alt="pilotprojekt"></a>
-            <a href="case.html"><img class="voks" src="individuel_spil.png" alt="individuel_spil"></a>
+            <a href="case.html#ide_link"><img class="voks" src="ide_udvikling.png" alt="ide_udvikling"></a>
+            <a href="case.html#pilot_link"><img class="voks" src="pilotprojekt.png" alt="pilotprojekt"></a>
+            <a href="case.html#spil_link"><img class="voks" src="individuel_spil.png" alt="individuel_spil"></a>
         </div>
     </section>
 </body>
