--- a/om-mig.html
+++ b/om-mig.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="da">
-<meta name="robots" content="noindex">
-<link rel="stylesheet" href="om-mig.css">
-<!--fonts-->
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Indie+Flower&family=Lobster+Two&display=swap=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
 
 <head>
+    <meta name="robots" content="noindex">
+    <link rel="stylesheet" href="om-mig.css">
+    <!--fonts-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Indie+Flower&family=Lobster+Two&display=swap=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Om mig</title>
@@ -41,12 +41,12 @@
     </div>
 
     <div id="foto_album">
-        <img id="foto" src="foto1.png" alt="foto1">
-        <img id="foto" src="foto2.png" alt="foto2">
-        <img id="foto" src="foto3.png" alt="foto3">
-        <img id="foto" src="foto4.png" alt="foto4">
-        <img id="foto" src="foto5.png" alt="foto5">
-        <img id="foto" src="foto6.png" alt="foto6">
+        <img class="foto" src="foto1.png" alt="foto1">
+        <img class="foto" src="foto2.png" alt="foto2">
+        <img class="foto" src="foto3.png" alt="foto3">
+        <img class="foto" src="foto4.png" alt="foto4">
+        <img class="foto" src="foto5.png" alt="foto5">
+        <img class="foto" src="foto6.png" alt="foto6">
     </div>
 
     <div id=container>
