--- a/om-mig.html
+++ b/om-mig.html
@@ -39,22 +39,22 @@
             <li><a href="om-mig.html"><span>OM MIG</span></a></li>
         </ul>
     </div>
+    <div class="om_mig">
+        <div id="foto1"><img src="foto1.png" alt="foto1"></div>
+        <div id="foto2"><img src="foto2.png" alt="foto2"></div>
+        <div id="foto3"><img src="foto3.png" alt="foto3"></div>
+        <div id="foto4"><img src="foto4.png" alt="foto4"></div>
+        <div id="foto5"><img src="foto5.png" alt="foto5"></div>
+        <div id="foto6"><img src="foto6.png" alt="foto6"></div>
 
-    <div id="foto_album">
-        <img class="foto" src="foto1.png" alt="foto1">
-        <img class="foto" src="foto2.png" alt="foto2">
-        <img class="foto" src="foto3.png" alt="foto3">
-        <img class="foto" src="foto4.png" alt="foto4">
-        <img class="foto" src="foto5.png" alt="foto5">
-        <img class="foto" src="foto6.png" alt="foto6">
-    </div>
-
-    <div id=container>
-        <p id="tekst">
-            Mit navn er Elisabeth Olsen & jeg er 22 år gammel. I sommers startede jeg på 1. semester på Multimediedesign på KEA - og har været glad for det siden. Jeg bor på Nørrebro med mine to højskole roomies, som jeg mødte på Vallekilde højskole. Jeg har to søstre der hedder Kristiane & Cordelia, samt mine dejlige forældre, Kim & Margrethe. Familie betyder alt for mig. I alt har jeg boet 3 forskellige lande gennem mit korte liv, nemlig England, Abu Dhabi & danmark. I fritiden elsker jeg at tilbringe min tid sammen med min kæreste, venner & familie i naturen. Min Kæreste Valdemar & jeg tager ofte på camping ture i skoven. Jeg elsker også at hækle, hygge kaffe-snakke, vandre, lave mad, surfe osv.
-            <br>
-            På mit 1. semester på KEA har jeg allerede lært en masse. Jeg har lært alt fra kode HTML, CSS & Javascript, til billed og video-redigering. Jeg har også lært omkring UX & UI research - nemlig hvad der forgår før man designer/programmere. Alt ind til videre har været spændene, og generalt så ser jeg altid frem til en dag hos KEA.
-        </p>
+        <div id="om_mig_tekst">
+            <p>
+                Mit navn er Elisabeth Olsen & jeg er 22 år gammel. I sommers startede jeg på 1. semester på Multimediedesign på KEA - og har været glad for det siden. Jeg bor på Nørrebro med mine to højskole roomies, som jeg mødte på Vallekilde højskole. Jeg har to søstre der hedder Kristiane & Cordelia, samt mine dejlige forældre, Kim & Margrethe. Familie betyder alt for mig. I alt har jeg boet 3 forskellige lande gennem mit korte liv, nemlig England, UAE (Abu Dhabi) & Danmark. I fritiden elsker jeg at tilbringe min tid sammen med min kæreste, venner & familie i naturen. Min Kæreste Valdemar & jeg tager ofte på camping ture i skoven. Jeg elsker også at hækle, hygge kaffe-snakke, vandre, lave mad, surfe osv.
+                <br>
+                <br>
+                På mit 1. semester på KEA har jeg allerede lært en masse. Jeg har lært alt fra kode HTML, CSS & Javascript, til billed og video-redigering. Jeg har også lært omkring UX & UI research - nemlig hvad der forgår før man designer/programmere. Om en uge har jeg også været til min første eksamen på KEA, og jeg synes det har været en meget naturlig og god process. Alt ind til videre har været spændene, og generalt så ser jeg altid frem til en dag hos KEA.
+            </p>
+        </div>
     </div>
 
     <script src="script.js"></script>
